Completed first draft for PAO chapter

--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -11,11 +11,11 @@
 \label{fig:Invisible_mode_setup}
 \end{figure}
 
-The Pierre Auger Observatory~\cite{} is the largest cosmic ray observatory in the world. Located outside Malargue in the Argentinian \textit{pampas} the observatory spans across an area of 3000k$m^2$. Originally conceptualized in the 1990s the Observatory was built in the early 2000s and fully completed in 2008. Geographically the site is located near the base of the Andes at an altitude of 1400m above sea level and across its whole span is relatively flat. The Observatory was designed to detect cosmic ray induced air showers having a primary energy from $10^{17}$eV to $10^{20}eV$ and beyond. It does so by identifying the EAS via two different complementary detecting components: \textit{Surface Detector} array (SD) and the \textit{Fluorescence Detector}(FD). A schematic o the observatory is shown in fig.~\ref{}. The SD consists of 1660 water Cherenkov tanks spread in a triangular grid with 1.5km spacing. The FD consists of four sites with 27 telescopes located at the edges of the ground array and overlooking the sky above. The Observatory also consists of various atmospheric monitoring devices such as LIDARs~\cite{}, laser facilities CLF and XLF~\cite{} and other weather sensors to constantly monitor the atmosphere which is important for FD operation. With the AugerPrime upgrade of the Observatory which is scheduled to be finished in 2024 two new detecting components are being added: The \textit{Radio Detector}(RD)~\cite{} and the \textit{Underground Muon Detector}(UMD)~\cite{}. The SD is also being upgraded with the addition of a scintillator on top of the tanks~\cite{}. Each individual component of the new upgrade is not discussed in detail since they are not used in the context of this thesis but only AugerPrime as a whole and its potential for detecting neutrinos at the Pierre Auger Observatory is discussed.
+The Pierre Auger Observatory~\cite{} is the largest cosmic ray observatory in the world. Located outside Malargue in the Argentinian \textit{pampas} the observatory spans across an area of 3000k$m^2$. Originally conceptualized in the 1990s the Observatory was built in the early 2000s and fully completed in 2008. Geographically the site is located near the base of the Andes at an altitude of 1400m above sea level and across its whole span is relatively flat. The Observatory was designed to detect cosmic ray induced air showers having a primary energy from $10^{17}$eV to $10^{20}eV$ and beyond. It does so by identifying the EAS via two different complementary detecting components: \textit{Surface Detector} array (SD) and the \textit{Fluorescence Detector}(FD). A schematic of the observatory is shown in fig.~\ref{}. The SD consists of 1660 water Cherenkov tanks spread in a triangular grid with 1.5km spacing. The FD consists of four sites with 27 telescopes located at the edges of the ground array and overlooking the sky above. The Observatory also consists of various atmospheric monitoring devices such as LIDARs~\cite{}, laser facilities CLF and XLF~\cite{} and other weather sensors to constantly monitor the atmosphere which is important for FD operation. With the AugerPrime upgrade of the Observatory which is scheduled to be finished in 2024 two new detecting components are being added: The \textit{Radio Detector}(RD)~\cite{} and the \textit{Underground Muon Detector}(UMD)~\cite{}. The SD is also being upgraded with the addition of a scintillator on top of the tanks~\cite{}. Each individual component of the new upgrade is not discussed in detail since they are not used in the context of this thesis but only AugerPrime as a whole and its potential for detecting neutrinos at the Pierre Auger Observatory is discussed.
 
 Eventhough, the primary objective of the Pierre Auger Observatory is UHECR physics it can also detect the neutrino induced EAS signature via both the SD and FD. The low neutrino interaction probability requires a detector which is always active. The high duty cycle of the SD $\approx 100$\% compared to a limited duty cycle of the FD $\approx 10-15$\% makes SD the more probable of the detector to detect neutrinos. This has already been shown in previous neutrino searches at Auger~\cite{} where the search with the SD provides the stringiest limits for neutrino searches at the Observatory~\cite{}. This chapter aims to provide a short review of the different components of the Observatory with a focus on the SD and its trigger system since it is the primary detector used for the analysis presented in this thesis. 
 
-\section*{Fluorescence Detector}
+\section{Fluorescence Detector}
 \label{sec:Fl_det}
 The Fluorescence Detector system at the Pierre Auger Observatory consists of an array of Fluorescence telescopes that are constantly looking inwards over the surface detector array trying to measure the nitrogen fluorescence induced by the EAS. The FD consists of 24 telescopes located at four different small hills( Coihueco, Los Morados, Loma Amarilla and Los Leones). The Coihueco site also consists of High Elevation Auger Telescopes (HEAT) which can be tilted upwards to extend the field of view at the Coiheuco site. Each of the 24 telescopes have a field of view of $30^{\circ} \times 30^{\circ}$ in azimuth and elevation. The combination of the telescopes gives an azimuth coverage of $180^{\circ}$. The HEAT telescopes can extend the field of view by a further $30^{\circ}$ in elevation. This gives a 100\% triggering efficiency for EAS above $10^{19}$eV for FD and above $10^{17}$eV with the inclusion of HEAT. Currently, the FD is always operated in combination with SD. As mentioned before the measured fluorescence light gives the deposited shower energy which is about 90\% of the total. The rest 10\% which is carried by non florescence producing particles such as neutrinos and muons is corrected with simulations~\cite{}. The expected fluorescence yield(combined for all wavelengths) is affected by the temperature, pressure and humidity of air~\cite{}. This is constantly monitored at the Observatory via several monitoring instruments. Each FD site is equipped with a LIDAR station~\cite{} which continuously monitors the aerosol profile, cloud and sky cameras which photograph the sky to estimate the cloud coverage and wind and rain sensors for safe functioning of the FD telescopes. Two laser facilities Central Laser Facility (CLF)~\cite{} and eXtreme Laser Facility (XLF)~\cite{} have also been functional since 2003 and 2008 respectively. These help provide hourly measurements of the atmospheric aerosol content and can also be used to measure FD performance~\cite{}. 
 
@@ -24,13 +24,13 @@ which is surrounded by a corrector ring. A spherical segmented mirror is used to
 
 The FD acts as an important calibration tool for the SD especially for the energy estimation where the hybrid detection of EAS is used to provide a simulation free primary energy estimate for the SD. It can also be useful for looking into high energy atmospheric phenomenon such as ELVES ~\cite{}. The low duty cylce of the FD ~15\% which is due to the operation being limited to clear moonless nights which limits its overall capabilities especially for a neutrino analysis. However, the FD has been used for up-going neutrino searches ~\cite{} and also has a potential use to look for atmosphere skimming CRs or neutrinos.  
 
-\section*{Surface Detector}
+\section{Surface Detector}
 \label{sec:Sur_det}
 The Surface Detector is a Water Cherenkov Detector(WCD) array which is used to detect the EAS on ground particularyly the footprint via detecting the shower particles that reach the ground. Each WCD~\cite{} comprises of a tank with 3.6m diameter and 1.2m height. It also consists of a reflective inner liner containing 12,000 liters of ultra-pure water. Three 9-in PMTs look into the water and detect the Cherenkov light produced by the charged shower particles as they traverse through water. With the AugerPrime upgrade the WCDs have also been equipped with a scintillator, additional PMT and a radio detector on top. These are described later in section~\ref{}. Each WCD tank also has its own electronics and communication system. All of the components are powered using a solar panel. An artistic representation along with all the components is shown in fig.~\ref{}. 
 
 The 1.5km grid spacing is commonly referred to as SD-1500. There are further sub arrays within the SD SD-750 also called the infill and SD-433 with the numbers representing the distance between the tanks in the sub-arrays. Each WCD can be operated on its own with each PMT signal first recorded at the station and then combined using a Central Data Acquisition System(CDAS)~\cite{} which uses a ranked system of triggers to decides if the combination of all WCDs is a candidate for an EAS event. The data taking process of the SD is described in more details in the following sections. Due to its autonomous nature the SD array is easy to maintain and has a duty cycle ~100\%. The array is only affected if there is a communication outage or if the solar panel cannot generate power for an extended time period both of which are rare at the site of the Pierre Auger Observatory.     
 
-\subsection*{Calibration of SD}
+\subsection{Calibration of SD}
 \label{sec:Sur_det_calib}
 
 The PMT signals in the SD are digitised by a 40MHz 10 bit \textit{flash analog-to-digital converters}(FADCs)~\cite{}. One of the signals is taken from the anode of the PMT and is called the \textit{low gain}(LG) channel and the other is taken by the last dynode and is amplified by a factor of 32 and is called the \textit{high gain}(HG) channel~\cite{}. The two signals provide sufficient precision and range to record both the signals produced near the shower core( ~1000 particles/$\mu$s) and those produced far from the core( ~1 particles/$\mu$s). The signal trace is recorded at a sampling rate of 40MHz with a total of 768 bins leading to each bin width corresponding to 25ns. Due to varying electronics across the WCDs a robust procedure is needed to calibrate each station to a universl unit of measurement for the SD. Also, due to the remoteness of the WCDs such a procedure needs to be performed locally for each station to allow for its functioning even in the case of individual broken PMTs. The unit of measurement used to calibrate the SD stations is called \textit{vertical equivalent muon}(VEM). This is the charge deposited by a vertically central through-going(VCT) muon in the WCD station. The SD by itself cannot select these particular muons but the normal SD measurement of all atmospheric muons has been studied in comparison with a muon telescope that only triggers on these VCTs for a reference tank~\cite{}. This measurement is used to calibrate the SD.
@@ -38,7 +38,7 @@ The PMT signals in the SD are digitised by a 40MHz 10 bit \textit{flash analog-t
 To perform the calibration charge distribution $Q_{VEM}^{peak}$ and the pulse height $I_{VEM}^{peak}$ both for the individual PMTs and their sums are compared to the measurements done with a muon telescope as shown in fig.~\ref{}. The first peak in the figure for the PMT measurement is caused due to low energy particles while the second peak is produced by the atmospheric muons. This peak corresponds to $Q_{VEM}^{peak}$~ 1.03 VEM for the sum and ~1.09 VEM for each PMT. The shift in comparison to the muon telescope measurement is caused by the convolution of photo-electron statistics on an asymmetric peak in the track length distribution and local light
 collection effects. This peak is used to obtain a conversion for the integrated signal of the PMT to VEM units. In addition to this since the subsequent trigger for the SD also requires a measure of the current $I_{VEM}$, this value also needs to be converted and calibrated to VEM units~\cite{}. The same technique as the charge calibration is employed since the VCTs also produce a peak in the pulse height histograms. The calibration is performed every 60s and sent to CDAS thus for an incoming event, calibration data is available for the preceding minute ensuring high calibration accuracy. 
 
-\subsection*{SD Trigger system}
+\subsection{SD Trigger system}
 \label{sec:Sur_det_trig}
 There are three types of different types of station level triggers scalar, calibration and shower trigger. The scalar trigger records signals for very low thresholds and is useful for supplementary physics such as space weather~\cite{}. Calibration trigger as explained in the previous section helps store and calculate the calibration parameters. The main shower trigger, used to record the EAS events is a hierarchical system consisting of two local triggers(T1 and T2) implemented at the station level, a third level trigger(T3) implemented by a CDAS and further event selection triggers(T4 and T5) stored by the SD but only used depending on the analysis and the quality of data required by the analysis. The hierarchical nature arises from the limits on the wireless communication network required for a vast autonomous array. The trigger aims to reduce the rate especially for the expected muonic background and at the same time maximising the EAS candidate detection. A schematic the logic of the trigger system is shown in fig~\ref{}. 
 
@@ -55,7 +55,38 @@ These triggers particularly improve the trigger efficiency and sensitivity for p
 
 T2 level triggers aim to apply higher constraints to T1 triggers. A T1-ToT trigger is automatically updated to a T2-ToT trigger while a T1-TH trigger for upgradation to T2-TH requires the signal to pass a higher threshold condition of >3.2$I_{VEM}^{peak}$ if there are three coincident PMTs. For two(one) working PMTs the threshold is stricter at >3.8(4.5)$I_{VEM}^{peak}$. After the T2 the expected station rate of events drops to ~23Hz. The T2 level triggers from all stations are sent to the CDAS to form a global trigger.
 
-The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes but only ne of these needs to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in fig~\ref{} is a set of concentric hexagons centered around each station with $n$ giving the order of the surrounding hexagons with 1 being the nearest. The first mode $ToT2C_1\&3C_2$(~\ref{}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$(~\ref{}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighboring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (6+5$C_n$)$\mu$s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30$\mu$s of the T3 are stored by CDAS as a part of the event. This process is described more in detail in ~\cite{}. With the present trigger setup the Observatory records about 3million SD events per year~\cite{}. 
+The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes but only ne of these needs to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in fig~\ref{} is a set of concentric hexagons centered around each station with $n$ giving the order of the surrounding hexagons with 1 being the nearest. The first mode $ToT2C_1\&3C_2$(~\ref{}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$(~\ref{}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighboring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (6+5$C_n$)$\mu$s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30$\mu$s of the T3 are stored by CDAS as a part of the event. This process is described more in detail in ~\cite{}. With the present trigger setup the Observatory records about 3 million SD events per year~\cite{}. 
+
+The next two triggers T4 and T5 are used to improve the data quality and in contrast to T1-T3 are implemented off-line. Both check for the geometry and the timing compatibility to select showers in the T3 events. The T4 trigger either of the two different criteria to select showers. The first is the requirement of a 3 ToT compact configuration i.e three nearby stations satisfying T2-ToT condition in triangular patterns shown in fig.~\ref{}. The second criterion, 4C1 requires the main triggered station to have atleast three triggered tanks out of its six first neighbors as shown in fig.~\ref{}. Both the criteria work in collaboration with each other, 3ToT configuration has a selection efficiency of ~99\% for showers below $60^{\circ}$ and the 4C1 configuration helps to recover the rest ~1\% showers lost below $60^{\circ}$ and also selects low energy events above $60^{\circ}$.
+
+The T5 fiducial triggers helps improve the quality of the showers selected especially for an accurate energy and angular reconstruction. The trigger ensures the selection of showers which are well contained in the detector array to avoid miss reconstruction of the core. There are two severity levels for the triggers called 6T5 and 5T5. The former requires all six stations in the first crown around the station with the highest signal to be functional while the latter only requires five. The 6T5 condition helps negate the showers that might fall at any hole of the detector array. These holes can be due to natural obstacles or non-functional tanks. Since 6T5 also improves the angular resolution and improves the overall quality of the selected showers this criterion is used in the search for neutrinos especially for angles below $75^{\circ}$. Above $75^{\circ}$ since most of the events expected are elongated along a single line the fulfillment of the T5 criteria is very difficult thus this trigger is not used. 
+
+\section{AugerPrime}
+\label{sec:Aug_prime}
+AugerPrime is the ongoing upgrade of the Pierre Auger Observatory to improve its sensitivity and detection capabilities. The upgrade aims to both improve the already present detector systems and also plans to add new components to the Observatory. One of the key aim of the \textit{AugerPrime} upgrade is to improve the estimation of the primary cosmic ray mass measured by the SD. This is done by the installation of plastic scintillators(\textit{Surface Scintillator Detectors}SSDs)~\ref{} on top of the WCD tanks. The differing responses of WCDs and the SSDs to the electromagnetic and muonic components helps enhance the overall mass sensitivity of the detector for vertical showers. However, due to the limited surface area of the scintillators this enhancements lost for the inclined showers. The upgrade also replaces the SD electronics( \textit{unified board}(UB) and SD front-end board) with the \textit{upgraded unified board}(UUB)~\ref{} and adds a \textit{small} PMT(sPMT)~\ref{} to the WCD. The UUBs allows for better station level processing power to account for the SSD and also add a faster sampling rate and better timing accuracy for the SD. The sPMT helps increase the dynamic range of the WCD by reducing the saturated signals in the stations closest to the shower axis. The \textit{AugerPrime} upgrade also includes the deployment of plastic scintillators beneath the WCD tanks, the \textit{underground muon detector}(UMD)~\ref{} as an extension of AMIGA~\ref{} across the SD-750 and SD-433 sub arrays. The UMD sensitive to the penetrating muon component of the EAS is very useful for extending the lower energy detection range of the Observatory and can also help in photon searches~\ref{}. Deployment of radio antennas on top of each WCD to form \textit{radio detector}(RD)~\ref{} is also a part of \textit{AugerPrime}. This will allow for the measurement of the radio component of the EAS which originates primarily from the electromagnetic component. Such a measurement especially at very inclined zenith angles will allow for an improved mass estimation even for higher zenith angles where the SSD is insensitive. Additionally, increasing the duty cycle of the FD by operating the telescopes during higher night sky brightness periods with reduced PMT gain is also a part of the upgrade. 
+
+In the context of this thesis, the data from the ongoing upgrade and the preceding test array is not used. However, it is important to mention that the higher sampling rate available with the UUBs and the RD in particular could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles(~$60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles (~>$75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits from non-detection of cosmogenic neutrinos which have further important implications for cosmic ray spectrum especially for the cutoff. The upgrade will also help improve the multi-messenger astronomy capabilities of the Observatory. 
+
+
+\section{The $\mathrm{\overline{Off}\underline{line}}$ Framework}
+\label{sec:Offline}
+The $\mathrm{\overline{Off}\underline{line}}$ framework~\ref{} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA, Aires etc. and the data recorded at the Observatory. $\mathrm{\overline{Off}\underline{line}}$ aims to standarize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire Collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis on. It also allows for the physics analysis to be stored and implemented within the framework which helps in ledgering and optimising productivity. The modular design allows it to be constantly updated for addition of new functionality and detectors. The framework is available internally on Gitlab~\ref{} to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off}\underline{line}}$ consists of three fundamental constituents as shown in fig.~\ref{}
+
+\paragraph*{Detector description:}
+This part acts as an input and consists of the information about the individual detector systems of the Pierre Auger Observatory. The information is available to the data processing modules as needed but cannot be modified. The static information such as the layout of the detector is stored in XML files whereas the time dependent information such as atmospheric conditions, hardware changes, calibration information etc. are stored in MySQL databases. For real events this allows for an almost perfect duplication of the conditions and for simulations it offers a vast range of available detector configurations.  
+
+\paragraph*{Event data:}
+This part is used to store the important event variables required by modules or for the end physics analysis. This includes basic detector level information such as measured or reconstructed traces, trigger information etc. to reconstructed variables such as energy, direction or $X_{max}$. The information is transferred to the data processing modules based on the use case. For a simulation the event information is first provided to the modules to generate the detector response which is then further reconstructed. In such a case true MC values, detector response and the reconstructed quantities are all stored in the event data. Whereas, for real recorded data since the detector response is already present only the reconstruction is performed by the data processing modules. Event data acts as both an input and output for the data processing component of the framework.
+
+\paragraph*{Data processing:}
+The type of task performed by the $\mathrm{\overline{Off}\underline{line}}$ is controlled using the data processing component. The different tasks are implemented using individual modules where each module is a self-contained algorithm with access to read the detector description and to read and write event data. Since, the modules do not interact with each other they can be easily updated and new modules can be used in an analysis in a plug and play fashion. The different modules can be implemented sequentially in a chosen order based on the analysis controlled via a xml file called Modulesequence.xml. The modules also have adjustable parameters which can either be controlled using XML steering files of each module or using a central XML file called bootstrap.xml. There are various standard pre defined sets of module sequences and bootstraps available in the $\mathrm{\overline{Off}\underline{line}}$ framework which can be directly used without any alterations. For this analysis one standard reconstruction SdDglNeutrinoReconstruction was tweaked to perform a neutrino search with MoPs and Totd. Two new reconstructions modules SdDghNeutrinoReconstruction and SdNeutrinoSimulation based on previously done analyses were also conformed and added to the $\mathrm{\overline{Off}\underline{line}}$ framework. 
+
+\subsection{Advanced Data Summary Tree}
+\label{sec:ADST}
+Advanced Data Summary Trees(ADSTs) are ROOT~\ref{} based file structure developed internally within the Pierre Auger Collaboration to store the output of the reconstruction. Additionally, it can also be used to store low level information such as detector description, calibration information and also the configuration of the $\mathrm{\overline{Off}\underline{line}}$ framework used to produce the ADST. ADSTs can be used to browse through individual events via the Eventbrowser and carry out higher level physics analysis. Since the structure is based on ROOT ADSTs can be read through different programming languages. In the context of the ADSTs are interfaced with in C++ directly and using modules such as Python Instrumentation Kit(PyIK)~\ref{} and uproot~\ref{} in Python. 
+
+
+
 
 
 
